--- a/app/src/main/res/layout/usage_frame_1.xml
+++ b/app/src/main/res/layout/usage_frame_1.xml
@@ -7,13 +7,18 @@
     android:orientation="vertical">
 
     <TextView
-        android:text="1"
+        android:text="네비게이션을 연결하는 법\n\n
+1. 블루투스를 활성화시킨다.\n\n
+2. 블루투스 장치검색 버튼을 누른다.\n\n
+3. 네비게이션 기기 이름이 나오면  '예'  버튼을 누른다. \n\n
+4. 연결이 되었으면 이용이 가능하다."
         android:layout_width="400dp"
-        android:layout_height="400dp"
-        android:textSize="50dp"
-        android:gravity="center"
-        android:textColor="#000000"
-        android:background="@color/yellow"
+        android:layout_height="600dp"
+        android:textSize="30dp"
+        android:fontFamily="@font/bold"
+        android:gravity="top"
+        android:textColor="@color/yellow"
+        android:background="@color/black"
         />
 
 </LinearLayout>
