--- a/app/src/main/res/layout/fragment_destination_arrive.xml
+++ b/app/src/main/res/layout/fragment_destination_arrive.xml
@@ -5,17 +5,28 @@
     android:layout_height="match_parent"
     tools:context=".ui.fragment.navigate.DestinationArriveFragment">
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
+
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/black"
         android:orientation="vertical"
         tools:context=".activity.navigation.DestinationArriveActivity">
 
+        <TextView
+            android:id="@+id/textView7"
+            android:layout_width="match_parent"
+            android:layout_height="130dp"
+            android:fontFamily="@font/extrabold"
+            android:text="@string/arriveDestination"
+            android:textAlignment="center"
+            android:textColor="@color/skyblue"
+            android:textSize="50dp" />
+
         <ImageView
             android:layout_width="match_parent"
-            android:layout_height="390dp"
+            android:layout_height="439dp"
             android:gravity="center_horizontal"
             android:src="@drawable/capstone_icon_skyblue" />
 
