--- a/app/src/main/res/layout/fragment_destination_select.xml
+++ b/app/src/main/res/layout/fragment_destination_select.xml
@@ -5,6 +5,13 @@
     android:background="@color/black"
     android:orientation="vertical">
 
+    <!-- 아이콘 이미지 -->
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:gravity="center_horizontal"
+        android:src="@drawable/capstone_icon" />
+
     <!-- 목적지 검색 -->
     <Button
         android:id="@+id/findDestinationBT"
