--- a/app/src/main/res/layout/fragment_inquiry.xml
+++ b/app/src/main/res/layout/fragment_inquiry.xml
@@ -7,45 +7,52 @@
     android:orientation="vertical"
     tools:context=".ui.fragment.setting.InquiryFragment">
 
+    <!-- 아이콘 이미지 -->
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:gravity="center_horizontal"
+        android:src="@drawable/capstone_icon_skyblue" />
+
     <Button
         android:layout_width="match_parent"
-        android:layout_height="120dp"
+        android:layout_height="100dp"
         android:layout_margin="15dp"
         android:background="@drawable/rectangle_button_skyblue_navy"
         android:fontFamily="@font/bold"
         android:text="3218****@\n dankook.com"
         android:textColor="@color/navy"
-        android:textSize="40sp" />
+        android:textSize="35sp" />
 
     <Button
         android:layout_width="match_parent"
-        android:layout_height="120dp"
+        android:layout_height="100dp"
         android:layout_margin="15dp"
         android:background="@drawable/rectangle_button_skyblue_navy"
         android:fontFamily="@font/bold"
         android:text="Instagram:\n@blindnavi"
         android:textColor="@color/navy"
-        android:textSize="40sp" />
+        android:textSize="35sp" />
 
     <Button
         android:layout_width="match_parent"
-        android:layout_height="120dp"
+        android:layout_height="100dp"
         android:layout_margin="15dp"
         android:background="@drawable/rectangle_button_skyblue_navy"
         android:fontFamily="@font/bold"
         android:text="02)1234-5678"
         android:textColor="@color/navy"
-        android:textSize="50sp" />
+        android:textSize="40sp" />
 
     <Button
         android:id="@+id/inquiryToMainBT"
         android:layout_width="match_parent"
-        android:layout_height="120dp"
+        android:layout_height="100dp"
         android:layout_margin="15dp"
         android:background="@drawable/rectangle_button_skyblue_red"
         android:fontFamily="@font/bold"
         android:text="@string/toMain"
         android:textColor="@color/red"
-        android:textSize="70sp" />
+        android:textSize="60sp" />
 
 </LinearLayout>
