--- a/app/src/main/res/layout/fragment_navigate.xml
+++ b/app/src/main/res/layout/fragment_navigate.xml
@@ -5,16 +5,15 @@
     android:layout_height="match_parent"
     tools:context=".ui.fragment.navigate.NavigateFragment">
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/black"
         android:orientation="vertical">
 
         <ImageView
-            android:layout_width="412dp"
-            android:layout_height="320dp"
+            android:layout_width="match_parent"
+            android:layout_height="450dp"
             android:gravity="center_horizontal"
             android:src="@drawable/capstone_icon_pink" />
 
