--- a/app/src/main/res/layout/fragment_setting_main.xml
+++ b/app/src/main/res/layout/fragment_setting_main.xml
@@ -6,6 +6,25 @@
     android:orientation="vertical"
     tools:context=".ui.fragment.setting.SettingMainFragment">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:gravity="bottom"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/textView7"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:fontFamily="@font/extrabold"
+            android:text="@string/setting"
+            android:textAlignment="center"
+            android:textColor="@color/skyblue"
+            android:textSize="70dp" />
+    </LinearLayout>
+
     <Button
         android:id="@+id/toTtsSpeedBT"
         android:layout_width="match_parent"
