--- a/app/src/main/res/layout/fragment_tts_setting.xml
+++ b/app/src/main/res/layout/fragment_tts_setting.xml
@@ -7,6 +7,24 @@
     android:orientation="vertical"
     tools:context=".ui.fragment.setting.TtsSettingFragment">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:gravity="bottom"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/textView7"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:fontFamily="@font/extrabold"
+            android:text="@string/ttsSpeed"
+            android:textAlignment="center"
+            android:textColor="@color/yellow"
+            android:textSize="70dp" />
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -21,22 +39,22 @@
             android:layout_width="wrap_content"
             android:layout_height="100dp"
             android:layout_weight="1"
-            android:background="@drawable/rectangle_button_yellow_darkgreen"
+            android:background="@drawable/rectangle_button_yellow_red"
             android:fontFamily="@font/bold"
             android:text="▲"
-            android:textColor="@color/darkgreen"
-            android:textSize="30dp" />
+            android:textColor="@color/red"
+            android:textSize="70dp" />
 
         <Button
             android:id="@+id/ttsSpeedDown"
             android:layout_width="wrap_content"
             android:layout_height="100dp"
             android:layout_weight="1"
-            android:background="@drawable/rectangle_button_yellow_darkgreen"
+            android:background="@drawable/rectangle_button_yellow_navy"
             android:fontFamily="@font/bold"
             android:text="▼"
-            android:textColor="@color/darkgreen"
-            android:textSize="30dp" />
+            android:textColor="@color/navy"
+            android:textSize="70dp" />
     </LinearLayout>
 
     <Button
