--- a/app/src/main/res/layout/fragment_usage.xml
+++ b/app/src/main/res/layout/fragment_usage.xml
@@ -27,19 +27,20 @@
 
         <me.relex.circleindicator.CircleIndicator3
             android:id="@+id/indicator"
-            android:layout_width="match_parent"
-            android:layout_height="48dp"
-            android:layout_marginBottom="10dp"
-            android:layout_gravity="bottom"/>
+            android:layout_width="400dp"
+            android:layout_height="600dp"
+            android:layout_gravity="bottom"
+            android:layout_marginBottom="10dp" />
     </FrameLayout>
+
     <Button
         android:id="@+id/usageToMainBT"
         android:layout_width="match_parent"
-        android:layout_height="70dp"
+        android:layout_height="90dp"
         android:layout_marginTop="10dp"
         android:background="@drawable/rectangle_button_yellow_darkgreen"
         android:text="@string/toMain"
-        android:textSize="30sp"
+        android:textSize="50sp"
         android:textColor="@color/darkgreen"
         android:fontFamily="@font/extrabold"
         />
