--- a/app/src/main/res/layout/usage_frame_2.xml
+++ b/app/src/main/res/layout/usage_frame_2.xml
@@ -7,13 +7,17 @@
     android:orientation="vertical">
 
     <TextView
-        android:text="2"
+        android:text="네비게이션 장갑 사용법 \n\n
+1. 북쪽은 검지, 동쪽은 중지, 남쪽은 약지, 서쪽은 소지이다. \n\n
+2. 한쪽 손가락의 진동이 느껴지면 한 가지 방향을 향한다.\n\n
+3. 두 손가락의 진동이 느껴지면 대각선 방향을 향한다."
         android:layout_width="400dp"
-        android:layout_height="400dp"
-        android:textSize="50dp"
-        android:gravity="center"
-        android:textColor="#000000"
-        android:background="@color/darkgreen"
+        android:layout_height="600dp"
+        android:textSize="30dp"
+        android:fontFamily="@font/bold"
+        android:gravity="top"
+        android:textColor="@color/skyblue"
+        android:background="@color/black"
         />
 
 </LinearLayout>
