--- a/app/src/main/res/layout/activity_bluetooth_connect.xml
+++ b/app/src/main/res/layout/activity_bluetooth_connect.xml
@@ -10,7 +10,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
+        android:layout_margin="10dp"
         android:gravity="bottom"
         android:orientation="horizontal">
 
@@ -29,6 +29,7 @@
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="300dp"
+        android:layout_margin="10dp"
         android:gravity="center_horizontal"
         android:src="@drawable/capstone_icon" />
 
@@ -37,6 +38,7 @@
         android:layout_width="match_parent"
         android:layout_height="90dp"
         android:layout_marginTop="20dp"
+        android:layout_margin="10dp"
         android:background="@drawable/rectangle_button_yellow_darkgreen"
         android:fontFamily="@font/bold"
         android:text="@string/searchBTDevice"
@@ -48,6 +50,7 @@
         android:layout_width="match_parent"
         android:layout_height="90dp"
         android:layout_marginTop="20dp"
+        android:layout_margin="10dp"
         android:background="@drawable/rectangle_button_yellow_navy"
         android:fontFamily="@font/bold"
         android:text="@string/yes"
@@ -59,6 +62,7 @@
         android:layout_width="match_parent"
         android:layout_height="90dp"
         android:layout_marginTop="20dp"
+        android:layout_margin="10dp"
         android:background="@drawable/rectangle_button_yellow_red"
         android:fontFamily="@font/bold"
         android:text="@string/no"
