--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -18,6 +18,7 @@
         <ImageView
             android:layout_width="157dp"
             android:layout_height="200dp"
+            android:layout_margin="5dp"
             android:src="@drawable/capstone_icon" />
 
         <TextView
@@ -25,6 +26,7 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
+            android:layout_margin="5dp"
             android:fontFamily="@font/bold"
             android:text="@string/mainMenuTitle"
             android:gravity="center"
@@ -36,6 +38,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="5dp"
         android:orientation="horizontal"
         android:gravity="center">
 
@@ -44,8 +47,9 @@
             android:id="@+id/routeGuideBT"
             android:layout_weight="1"
             android:layout_width="0dp"
-            android:layout_height="250dp"
+            android:layout_height="230dp"
             android:layout_marginEnd="10dp"
+            android:layout_margin="5dp"
             android:background="@drawable/rectangle_button_yellow_darkgreen"
             android:backgroundTint="@color/yellow"
             android:fontFamily="@font/extrabold"
@@ -58,7 +62,7 @@
             android:id="@+id/btConnectBT"
             android:layout_weight="1"
             android:layout_width="0dp"
-            android:layout_height="250dp"
+            android:layout_height="230dp"
             android:layout_marginStart="10dp"
             android:background="@drawable/rectangle_button_yellow_red"
             android:backgroundTint="@color/yellow"
@@ -72,6 +76,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="5dp"
         android:orientation="horizontal"
         android:gravity="center"
         android:layout_marginTop="20dp">
@@ -81,8 +86,8 @@
             android:id="@+id/settingBT"
             android:layout_weight="1"
             android:layout_width="0dp"
-            android:layout_height="250dp"
-            android:layout_marginEnd="10dp"
+            android:layout_height="230dp"
+            android:layout_margin="5dp"
             android:background="@drawable/rectangle_button_yellow_navy"
             android:backgroundTint="@color/yellow"
             android:fontFamily="@font/extrabold"
@@ -95,8 +100,8 @@
             android:id="@+id/exitBT"
             android:layout_weight="1"
             android:layout_width="0dp"
-            android:layout_height="250dp"
-            android:layout_marginStart="10dp"
+            android:layout_height="230dp"
+            android:layout_margin="5dp"
             android:background="@drawable/rectangle_button_yellow_olive"
             android:backgroundTint="@color/yellow"
             android:fontFamily="@font/extrabold"
