--- a/app/src/main/res/layout/fragment_destination_select.xml
+++ b/app/src/main/res/layout/fragment_destination_select.xml
@@ -9,6 +9,9 @@
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="200dp"
+        android:layout_marginHorizontal="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
         android:gravity="center_horizontal"
         android:src="@drawable/capstone_icon" />
 
