--- a/app/src/main/res/layout/fragment_inquiry.xml
+++ b/app/src/main/res/layout/fragment_inquiry.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:paddingTop="20dp"
+    android:paddingBottom="20dp"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -10,49 +12,50 @@
     <!-- 아이콘 이미지 -->
     <ImageView
         android:layout_width="match_parent"
-        android:layout_height="200dp"
+        android:layout_height="240dp"
         android:gravity="center_horizontal"
-        android:src="@drawable/capstone_icon_skyblue" />
+        android:src="@drawable/capstone_icon_skyblue"
+        android:layout_marginHorizontal="20dp"/>
 
     <Button
         android:layout_width="match_parent"
-        android:layout_height="100dp"
+        android:layout_height="80dp"
         android:layout_margin="15dp"
         android:background="@drawable/rectangle_button_skyblue_navy"
         android:fontFamily="@font/bold"
         android:text="3218****@\n dankook.com"
         android:textColor="@color/navy"
-        android:textSize="35sp" />
+        android:textSize="25sp" />
 
     <Button
         android:layout_width="match_parent"
-        android:layout_height="100dp"
+        android:layout_height="80dp"
         android:layout_margin="15dp"
         android:background="@drawable/rectangle_button_skyblue_navy"
         android:fontFamily="@font/bold"
         android:text="Instagram:\n@blindnavi"
         android:textColor="@color/navy"
-        android:textSize="35sp" />
+        android:textSize="25sp" />
 
     <Button
         android:layout_width="match_parent"
-        android:layout_height="100dp"
+        android:layout_height="80dp"
         android:layout_margin="15dp"
         android:background="@drawable/rectangle_button_skyblue_navy"
         android:fontFamily="@font/bold"
         android:text="02)1234-5678"
         android:textColor="@color/navy"
-        android:textSize="40sp" />
+        android:textSize="35sp" />
 
     <Button
         android:id="@+id/inquiryToMainBT"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
+        android:layout_height="80dp"
         android:layout_margin="15dp"
         android:background="@drawable/rectangle_button_skyblue_red"
         android:fontFamily="@font/bold"
         android:text="@string/toMain"
         android:textColor="@color/red"
-        android:textSize="60sp" />
+        android:textSize="50sp" />
 
 </LinearLayout>
