--- a/app/src/main/res/layout/fragment_navigate.xml
+++ b/app/src/main/res/layout/fragment_navigate.xml
@@ -14,6 +14,8 @@
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="450dp"
+            android:layout_marginHorizontal="10dp"
+            android:layout_marginVertical="10dp"
             android:gravity="center_horizontal"
             android:src="@drawable/capstone_icon_pink" />
 
