--- a/app/src/main/res/layout/fragment_usage.xml
+++ b/app/src/main/res/layout/fragment_usage.xml
@@ -13,7 +13,9 @@
     <FrameLayout
         android:layout_gravity="center"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        >
 
         <androidx.viewpager2.widget.ViewPager2
             android:id="@+id/viewpager"
@@ -37,7 +39,8 @@
         android:id="@+id/usageToMainBT"
         android:layout_width="match_parent"
         android:layout_height="90dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
+        android:layout_marginHorizontal="10dp"
         android:background="@drawable/rectangle_button_yellow_darkgreen"
         android:text="@string/toMain"
         android:textSize="50sp"
