fix: 사용법 하면을 2번 이상 들어갈 경우 애플리케이션이 중단하는 문제 해결

--- a/app/src/main/res/layout/fragment_usage.xml
+++ b/app/src/main/res/layout/fragment_usage.xml
@@ -23,9 +23,10 @@
             android:clipToPadding="false"
             android:clipChildren="false"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:scaleType="fitXY"
-            android:layout_marginBottom="10dp"/>
+            android:layout_marginBottom="10dp"
+            android:saveEnabled="false"/>
 
         <me.relex.circleindicator.CircleIndicator3
             android:id="@+id/indicator"
