--- a/app/src/main/res/layout/fragment_usage.xml
+++ b/app/src/main/res/layout/fragment_usage.xml
@@ -30,7 +30,7 @@
         <me.relex.circleindicator.CircleIndicator3
             android:id="@+id/indicator"
             android:layout_width="400dp"
-            android:layout_height="600dp"
+            android:layout_height="550dp"
             android:layout_gravity="bottom"
             android:layout_marginBottom="10dp" />
     </FrameLayout>
@@ -38,13 +38,13 @@
     <Button
         android:id="@+id/usageToMainBT"
         android:layout_width="match_parent"
-        android:layout_height="90dp"
-        android:layout_marginBottom="10dp"
+        android:layout_height="80dp"
+        android:layout_marginBottom="5dp"
         android:layout_marginHorizontal="10dp"
-        android:background="@drawable/rectangle_button_yellow_darkgreen"
+        android:background="@drawable/rectangle_button_skyblue_red"
         android:text="@string/toMain"
         android:textSize="50sp"
-        android:textColor="@color/darkgreen"
+        android:textColor="@color/red"
         android:fontFamily="@font/extrabold"
         />
 
