--- a/app/src/main/res/layout/usage_frame_3.xml
+++ b/app/src/main/res/layout/usage_frame_3.xml
@@ -4,7 +4,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center"
-    android:background="@color/skyblue"
     android:orientation="vertical">
 
     <TextView
@@ -14,13 +13,13 @@
 3. 조절을 완료한 후 저장을 누르면 해당 속도가 적용된다. \n\n
 4. 같은 방식으로 속도 변경 후 적용하면 된다.
 "
-        android:layout_width="400dp"
-        android:layout_height="600dp"
+        android:layout_width="350dp"
+        android:layout_height="550dp"
         android:textSize="30dp"
         android:fontFamily="@font/bold"
         android:gravity="top"
-        android:textColor="#000000"
-        android:background="@color/skyblue"
+        android:textColor="#FFFFFF"
+        android:background="@color/black"
         />
 
 </LinearLayout>
