fix: '종료' 텍스트 색 olive -> black

--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -98,7 +98,7 @@
             android:background="@drawable/rectangle_button"
             android:fontFamily="@font/extrabold"
             android:text="@string/exit"
-            android:textColor="@color/olive"
+            android:textColor="@color/black"
             android:textSize="85dp" />
     </LinearLayout>
 </LinearLayout>
